# agent-microservice-boilerplate

./: .dockerignore  .env.example  .env.rate_limiting.example  .gitignore  .pre-commit-config.yaml  00-PROJECT-OVERVIEW.md  01-project-structure.md  02-core-interfaces.md  03-configuration-pattern.md  04-fastapi-foundation.md  05-database-patterns.md  06-protocol-stubs.md  07-agent-interface.md  08-tool-system.md  09-observability-patterns.md  10-docker-scripts.md  API_VERSIONING_SUMMARY.md  COMPREHENSIVE_TEST_SUITE.md  DATABASE_ENHANCEMENT_SUMMARY.md  DATABASE_QUICK_REFERENCE.md  DOCKER_K8S_SUMMARY.md  DOCUMENTATION_SUMMARY.md  FILE_LOCATIONS.txt  HELM_CICD_MONITORING_SUMMARY.md  HELM_CICD_STRUCTURE.txt  HELM_DEPLOYMENT_GUIDE.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_SUMMARY.md  Makefile  PILOT_READY_TASKS.md  PROTOCOL_IMPLEMENTATION.md  QUICKSTART_CELERY.md  QUICK_REFERENCE.md  QUICK_START_API_VERSIONING.md  RATE_LIMITING.md  RATE_LIMITING_ARCHITECTURE.md  RATE_LIMITING_IMPLEMENTATION_SUMMARY.md  RATE_LIMITING_QUICKSTART.md  RATE_LIMITING_REQUIREMENTS.txt  (+9 more)
.claude/: CLAUDE.md
.claude/commands/: deploy.md  new-agent.md  new-tool.md
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: build.yml  ci.yml  deploy.yml  security.yml
alembic/: env.py
alembic/versions/: 20241213_0001_create_audit_logs_table.py  20241213_0002_create_users_table.py  20241213_0003_create_api_keys_table.py  20241213_0004_create_sessions_table.py
docker/: Dockerfile  Dockerfile.worker  README.md  docker-compose.yml
docs/: README.md  database_guide.md  deployment.md  enhanced_repository_features.md  first-agent.md  installation.md  quickstart.md  repository_quick_reference.md  secrets_architecture.md  secrets_management.md  secrets_quick_reference.md
docs/api/: agents.md  authentication.md  protocols.md  tools.md
examples/: README.md  repository_usage.py  secrets_usage.py
k8s/: README.md  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  pdb.yaml  secret.yaml  service.yaml  serviceaccount.yaml  worker-deployment.yaml
monitoring/: README.md  alertmanager.yml  prometheus.yml
requirements/: base.txt  dev.txt  prod.txt  test.txt
scripts/: dev.sh  verify_database.py
tests/: AUTH_TESTS_README.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  SETUP.md  SUMMARY.txt  TEST_GUIDE.md  TEST_SUITE_SUMMARY.md  __init__.py  auth_test_commands.sh  conftest.py  test_enhanced_repository.py  verify_test_suite.sh
(+270 files in other folders)
