[project]
name = "agent-service"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    # Core
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "sqlmodel>=0.0.14",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",

    # Cache & Background Tasks
    "redis>=5.2.0",
    "celery[redis]>=5.3.0",

    # Security & Authentication
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0.0",
    "bleach>=6.0.0",  # HTML sanitization

    # Rate Limiting
    "slowapi>=0.1.9",

    # Error Tracking
    "sentry-sdk[fastapi]>=2.0.0",

    # Observability
    "structlog>=24.4.0",
    "prometheus-client>=0.21.0",

    # HTTP
    "httpx>=0.28.0",
    "sse-starlette>=2.1.0",

    # Utilities
    "tenacity>=9.0.0",
    "python-dotenv>=1.0.0",
    "psutil>=6.0.0",  # System and process monitoring
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-xdist>=3.5.0",  # Parallel test execution
    "factory-boy>=3.3.0",  # Test data factories
    "faker>=22.0.0",  # Fake data generation
    # Additional database support for tests
    "aiosqlite>=0.19.0",  # SQLite async support for tests
    "sqlmodel>=0.0.14",  # SQLModel for database models
    # Code quality
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

# OpenTelemetry instrumentation
otel = [
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-instrumentation-fastapi>=0.41b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.41b0",
    "opentelemetry-instrumentation-redis>=0.41b0",
    "opentelemetry-instrumentation-httpx>=0.41b0",
    "opentelemetry-exporter-otlp>=1.20.0",
]

# Azure AD authentication
azure = [
    "msal>=1.24.0",
    "azure-identity>=1.14.0",
]

# AWS Cognito authentication
aws = [
    "boto3>=1.28.0",
    "python-jose[cryptography]>=3.3.0",
]

# Agent frameworks - install what you need
langgraph = ["langgraph>=0.2.0", "langchain-core>=0.3.0"]
autogen = ["autogen-agentchat>=0.4.0"]
crewai = ["crewai>=0.1.0"]

# Protocol SDKs - install what you need
mcp = ["fastmcp>=2.0.0"]
a2a = ["a2a-sdk>=0.2.0"]
agui = ["ag-ui-protocol>=0.1.0"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
